# kodo-cli

./: .Kōdō.json  .gitignore  .mycode.json  AGENT_DEMO.md  README.md  ast_generator.py  context_manager.py  main.py  pyproject.toml  requirements.txt  structure.backup_20250628_112634.md  structure.md
agent/: core.py
config/: settings.py
file_ops/: reader.py
kodo_context/cache/: metadata.json
kodo_context/context/: history.md  overview.md  rules.cline  snapshot.json
llm/: providers.py
mycode/: calculator.py
